Closed Bug 718650 Opened 14 years ago Closed 14 years ago

IonMonkey: Reset script use count when invalidating scripts

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
When type information changes, we should wait for the script to get hot before compiling/inlining again. Makes sha1 a bit faster and IIUC this is what JM+TI does.
Attachment #589186 - Flags: review?(bhackett1024)
Attachment #589186 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: