Reset use count of invalidated scripts (bug 718650, r=bhackett)