js/src/ion/Ion.h
@@ -162,7 +162,7 @@ bool Cannon(JSContext *cx, StackFrame *fp);
 bool SideCannon(JSContext *cx, StackFrame *fp, jsbytecode *pc);
 
 // Walk the stack and invalidate active Ion frames for the invalid scripts.
-void Invalidate(JSContext *cx, const Vector<JSScript *> &invalid);
+void Invalidate(JSContext *cx, const Vector<JSScript *> &invalid, bool resetUses = true);
 
 static inline bool IsEnabled()
 {
